--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,9 +151,7 @@ jobs:
       - run: 
           name: Read version and set it as env variable
           command: |
-            version = $(jq .project.version version.json)
-            echo version
-            echo 'export DOCKER_VERSION=version' >> $BASH_ENV
+            export DOCKER_VERSION=$(jq .project.version version.json)
       - run: 
           name: Get version from env variables
           command: echo $DOCKER_VERSION
