--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,7 @@ jobs:
       - run: 
           name: Read version and set it as env variable
           command: |
-            echo 'export IMG_TAG=$(jq .project.version version.json)' $BASH_ENV
+            echo 'export IMG_TAG=$(jq .project.version version.json)' >> $BASH_ENV
             source $BASH_ENV
       - run: 
           name: Get version from env variables
