--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,12 +151,13 @@ jobs:
       - run: 
           name: Read version and set it as env variable
           command: |
-            echo 'export IMG_TAG=$(jq .project.version version.json)' >> $BASH_ENV
+            echo 'export PROJECT_VERSION=$(jq .project.version version.json -r)' >> $BASH_ENV
+            echo 'export PROJECT_VERSION=<< pipeline.parameters.project_name >>-$PROJECT_VERSION-$(echo $CIRCLE_SHA1 | cut -c -7)' >> $BASH_ENV
             source $BASH_ENV
-            echo << pipeline.parameters.project_name >>$IMG_TAG$(echo $CIRCLE_SHA1 | cut -c -7)
+            echo << pipeline.parameters.project_name >>$PROJECT_VERSION$(echo $CIRCLE_SHA1 | cut -c -7)
       - run: 
           name: Get version from env variables
-          command: echo $IMG_TAG
+          command: echo $PROJECT_VERSION
       # - run:
       #     name: Build docker image with NO cache
       #     command: |
