--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,6 +148,12 @@ jobs:
       - run: 
           name: ls
           command: ls
+      - when:
+          condition:
+            and:
+              - equal: [ master, << pipeline.git.branch >> ]
+          steps:
+            - echo "This is master"
       - run: 
           name: Read version and set it as env variable
           command: |
