--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,8 +150,7 @@ jobs:
           command: ls
       - when:
           condition:
-            and:
-              - equal: [ master, << pipeline.git.branch >> ]
+            equal: [ master, << pipeline.git.branch >> ]
           steps:
             - run: echo "This is master......"
       - run: 
