--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,9 +152,10 @@ jobs:
           condition:
               or:
                 - equal: [ master, << pipeline.git.branch >> ]
-
           steps:
-            - run: echo "This is master......"
+            - run: 
+                name: This is MASTER
+                command: echo "This is master......"
       - run: 
           name: Read version and set it as env variable
           command: |
