--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,9 +152,10 @@ jobs:
           condition:
               or:
                 - equal: [ master, << pipeline.git.branch >> ]
+                - equal: [ branch-1, << pipeline.git.branch >> ]
           steps:
             - run: 
-                name: This is MASTER
+                name: This is MASTER or branch-1
                 command: echo "This is master......"
       - run: 
           name: Read version and set it as env variable
