--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,8 +151,8 @@ jobs:
       - run:
           name: Regex
           command: |
-            foo = 'myword'
-            echo foo
+            echo 'export DEPENDABOT=$(git log --format=oneline -n 1 $(echo $CIRCLE_SHA1 | cut -c -7))' >> $BASH_ENV
+            echo $DEPENDABOT
       - when:
           condition:
               or:
