--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,8 +151,10 @@ jobs:
       - run:
           name: Regex
           command: |
-            echo 'export DEPENDABOT=$(git log --format=oneline -n 1 $(echo $CIRCLE_SHA1 | cut -c -7))' >> $BASH_ENV
+            echo 'export COMM=$(echo $CIRCLE_SHA1 | cut -c -7)' >> $BASH_ENV
+            echo 'export DEPENDABOT=$(git log --format=oneline -n 1 $COMM)' >> $BASH_ENV
             source $BASH_ENV
+            echo $COMM
             echo $DEPENDABOT
       - when:
           condition:
