--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,14 +151,21 @@ jobs:
       - run:
           name: Regex
           command: |
-            echo 'export COMM=$(echo $CIRCLE_SHA1 | cut -c -7)' >> $BASH_ENV
-            echo 'export DEPENDABOT=$(git log --format=oneline -n 1 $COMM)' >> $BASH_ENV
+            # echo 'export COMM=$(echo $CIRCLE_SHA1 | cut -c -7)' >> $BASH_ENV
+            # echo 'export DEPENDABOT=$(git log --format=oneline -n 1 $COMM)' >> $BASH_ENV
+            # source $BASH_ENV
+            # echo $COMM
+            # echo $DEPENDABOT
+            # [[ $DEPENDABOT =~ (^|[^[:alnum:]_])Bump([^[:alnum:]_]|$) ]] && echo 'export DEPENDABOT_TAG=-dependabot' >> $BASH_ENV
+            # source $BASH_ENV
+            # echo $DEPENDABOT_TAG
+            echo 'export PROJECT_VERSION=$(jq .project.version core/version.json -r)' >> $BASH_ENV
+            echo 'export COMMIT=$(echo $CIRCLE_SHA1 | cut -c -7)' >> $BASH_ENV
+            echo 'export COMMIT_MSG=$(git log --format=oneline -n 1 $COMMIT)' >> $BASH_ENV
+            [[ $COMMIT_MSG =~ (^|[^[:alnum:]_])Bump([^[:alnum:]_]|$) ]] && echo 'export DEPENDABOT_TAG=-dependabot' >> $BASH_ENV
+            echo 'export IMG_TAG=<< pipeline.parameters.project_name >>-$PROJECT_VERSION-$COMMIT$DEPENDABOT_TAG' >> $BASH_ENV
             source $BASH_ENV
-            echo $COMM
-            echo $DEPENDABOT
-            [[ $DEPENDABOT =~ (^|[^[:alnum:]_])Bump([^[:alnum:]_]|$) ]] && echo 'export DEPENDABOT_TAG=-dependabot' >> $BASH_ENV
-            source $BASH_ENV
-            echo $DEPENDABOT_TAG
+            echo $PROJECT_VERSION-$COMMIT$DEPENDABOT_TAG
       - when:
           condition:
               or:
